<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name" translatable="false">Go4lunch</string>

    // NAVIGATION
    <string name="navigation_map_view">Map View</string>
    <string name="navigation_list_view">List View</string>
    <string name="navigation_workmates">Workmates</string>

    <string name="bottom_navigation_map_view">Map View</string>
    <string name="bottom_navigation_list_view">List View</string>
    <string name="bottom_navigation_workmates">Workmates</string>

    // FRAGMENTS LABELS
    <string name="map_activity_label">I\'m Hungry !</string>
    <string name="list_activity_label">I\'m Hungry !</string>
    <string name="workmates_activity_label">Available workmates</string>

    // AUTHENTICATION
    <string name="login" translatable="false">Connexion</string>
    <string name="error_not_connected">User must be logged !</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No internet connexion !</string>
    <string name="error_unknown_error">An unknown error occurred&#8230;</string>
    <string name="connection_succeed">Authentication completed !</string>
    <string name="disconnection_succeed">Logout completed !</string>
    <string name="disconnection_failed">Error during logout… Try again</string>


    // FACEBOOK AUTHENTICATION
    <string name="facebook_application_id" translatable="false">1194505511151823</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1194505511151823</string>


    // NAVIGATION DRAWER
    <string name="user_name" translatable="false">John SMITH</string>
    <string name="user_email" translatable="false">jsmith.1337@gmail.com</string>
    <string name="drawer_title_1">YOUR LUNCH</string>
    <string name="drawer_title_2">SETTINGS</string>
    <string name="drawer_title_3">LOGOUT</string>
    <string name="info_no_email_found">Email not found</string>
    <string name="info_no_username_found">Username not found</string>
    <string name="logo" translatable="false">Go4Lunch logo</string>

    // Used in NavigationDrawer
    <string name="navigation_drawer_open" translatable="false">Start</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>


    // RESTAURANT MAP ITEM
    <string name="details_button">See details</string>

    // RESTAURANT LIST ITEM
    <string name="restaurant_id" translatable="false">ID SDK PLACES</string>
    <string name="restaurant_name" translatable="false">Le Zinc</string>
    <string name="restaurant_style_and_address" translatable="false">French - 12 rue du Faubourg Poissonnière</string>
    <string name="restaurant_style_and_address_separator" translatable="false"> - </string>
    <string name="opening_hours" translatable="false">Open until 7pm</string>
    <string name="distance" translatable="false">120m</string>
    <string name="restaurant_users" translatable="false">(2)</string>
    <string name="guest_picture">picture_of_a_guest</string>
    <string name="restaurant_picture">picture_of_the_restaurant</string>
    <string name="pick_place" translatable="false">Find a place</string>
    <string name="option_get_place" translatable="false">Get place</string>
    <string name="no_address_found">Address not found</string>

    // RESTAURANT DETAILS
    <string name="restaurant_details_title_toolbar">Restaurant details</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="unlike">UNLIKE</string>
    <string name="website">WEBSITE</string>
    <string name="no_website_notification">This restaurant doesn\'t have website…</string>
    <string name="no_secured_website">This website\'s link is not safe…</string>
    <string name="no_phoneNumber_notification">This restaurant doesn\'t get phone number…</string>
    <string name="distance_in_meters_end" translatable="false">%d m</string>
    <string name="restaurant_location" translatable="false">Restaurant location</string>
    <string name="restaurant_address" translatable="false">12 rue du Faubourg Poissonnière</string>
    <string name="restaurant_postal_code_and_city" translatable="false">75000 PARIS</string>
    <string name="booking_date_dialog_title">Select a booking date</string>
    <string name="booking_success">Booking created successfully for the&#160;</string>
    <string name="booking_error">You already booked for the&#160;</string>
    <string name="nobody_booked_today">Nobody booked for today in this restaurant</string>
    <string name="nobody_booked_today_except_you">Except you, nobody booked here for today</string>
    <string name="booking_delete_success">Booking deleted successfully !</string>
    <string name="at">&#160;at&#160;</string>


    // SETTINGS ACTIVITY
    <string name="settings_title_toolbar">Settings</string>
    <string name="popup_message_choice_yes">YES</string>
    <string name="popup_message_choice_no">NO</string>
    <string name="popup_message_confirmation_delete_account">Do you really want to delete your account ?</string>
    <string name="delete_account_succeed">Account deleted with success !</string>
    <string name="delete_account_failed">Error during deletion… Try again</string>
    <string name="delete_button_text">Delete account</string>
    <string name="update_button_text">Save changes</string>
    <string name="settings_enable_notifications">Enable notifications</string>
    <dimen name="settings_progressbar_size">80dip</dimen>
    <string name="settings_user_name_title">Full name</string>
    <string name="settings_user_name" translatable="false">John Doe</string>
    <string name="settings_user_email_title">Email (not editable)</string>
    <string name="settings_user_email" translatable="false">johndoe@test.com</string>
    <string name="account_update_success">Account update successful !</string>
    <string name="allow_photo_access">Please allow pictures access</string>
    <string name="picture_enabled">You can choose a picture !</string>
    <string name="no_image_chosen">No image chosen</string>


    // USER LUNCH ACTIVITY
    <string name="user_lunch_title_toolbar">Your lunch</string>

    // SEARCH BAR
    <string name="search_bar_title">Search</string>
    <string name="search_bar_hint">Search restaurants</string>

    // WORKMATES FRAGMENT
    <string name="workmates_text_eating" translatable="false">Scarlett is eating french (Le Zinc)</string>

    // WORKMATES ADAPTER
    <string name="no_restaurant">No restaurant found for this workmate</string>
    <string name="website_button_description">website button</string>
    <string name="phone_button_description">phone to restaurant</string>
    <string name="restaurant_photo">photo of the restaurant</string>
    <string name="booking_button_description">make booking in the restaurant</string>
    <string name="user_avatar_description">user avatar picture</string>
    <string name="user_avatar_update">update avatar picture</string>
    <string name="no_booking_for_user">You didn\'t make any booking yet</string>
    <string name="user_is_eating_to">&#160;is eating to&#160;</string>
    <string name="not_decided">&#160;hasn\'t decided yet</string>

    // BOOKING ADAPTER
    <string name="dialog_title">Do you really want to delete this booking ?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="no_opening_hours">Opening hours not registered yet</string>
    <string name="closed_today">Closed today</string>
    <string name="open_from">Open today from&#160;</string>
    <string name="us_hours_separator">:</string>
    <string name="am">&#160;am</string>
    <string name="open_to">&#160;to&#160;</string>
    <string name="pm">&#160;pm</string>
    <string name="no_available_workmates">No available workmates</string>

    // GUEST ADAPTER
    <string name="is_joining">&#160;is joining !</string>
    <string name="are_joining">&#160;are joining !</string>

    // NOTIFICATIONS
    <string name="notification_title">Your lunch</string>
    <string name="notification_message">Where do you eat today ?</string>
    <string name="notification_message_restaurant">Today you eat to&#160;</string>
    <string name="notification_you_are_eating_alone">You eat alone today…</string>
    <string name="eats_here">&#160;eats here today !</string>


</resources>