<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map_view" >

    <fragment
        android:id="@+id/navigation_map_view"
        android:name="com.benlinux.go4lunch.ui.map.MapFragment"
        android:label="@string/map_activity_label"
        tools:layout="@layout/fragment_map_view" />

    <fragment
        android:id="@+id/navigation_list_view"
        android:name="com.benlinux.go4lunch.ui.list.ListFragment"
        android:label="@string/list_activity_label"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.benlinux.go4lunch.ui.workmates.WorkmatesFragment"
        android:label="@string/bottom_navigation_workmates"
        tools:layout="@layout/fragment_workmates" />
</navigation>