<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layoutDirection="locale"
    android:layout_marginHorizontal="@dimen/small_margin"
    android:paddingHorizontal="@dimen/default_medium_margin"
    android:paddingVertical="@dimen/small_margin"
    android:gravity="center"
    android:elevation="@dimen/small_margin"
    android:background="@drawable/background_info_window"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff000000"
        android:text="@string/restaurant_name"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rating"
        style="@style/RatingBar"
        android:theme="@style/RatingBar"
        android:elevation="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_margin" />

    <TextView
        android:id="@+id/street"
        android:text="@string/restaurant_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_margin"
        android:textColor="#ff7f7f7f" />

    <TextView
        android:id="@+id/postalCodeAndCity"
        android:text="@string/restaurant_postal_code_and_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff7f7f7f" />

    <TextView
        android:id="@+id/place_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff7f7f7f"
        android:visibility="gone"/>

    <Button
        android:id="@+id/seeDetailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="@dimen/very_small_margin"
        android:textColor="@color/white"
        android:text="@string/details_button"
        android:textAllCaps="false" />

</LinearLayout>