<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/drawer_background" >

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_medium_margin"
        android:text="@string/app_name"
        android:textSize="@dimen/high_title_size"
        style="@style/DrawerTheme"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/default_large_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin" >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/user_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_circle"
            tools:tint="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_name"
                style="@style/DrawerTheme"/>

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_email"
                style="@style/DrawerTheme"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>